# isucon-webapp

./: deploy.sh
ansible/: main.yml
ansible/files/: isucon-webapp-backend.service.j2  nginx-default.conf
backend/: .gitignore  Cargo.toml  Cross.toml
backend/src/: db.rs  file.rs  main.rs
cloud-init/: README.md  cloud-config.yaml  launch.sh
frontend/: package-lock.json  package.json  vite.config.ts
frontend/app/: root.tsx
frontend/app/routes/: _index.tsx  task.$id.tsx
frontend/styles/: app.scss
