[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.91", features = ["backtrace"] }
axum = { version = "0.7.7", features = ["macros", "multipart"] }
dotenv = "0.15.0"
envy = "0.4.2"
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
sqlx = { version = "0.8.2", features = ["mysql", "runtime-tokio"] }
thiserror = "1.0.67"
tokio = { version = "1.41.0", features = ["full"] }
tower = "0.5.1"

[profile.release]
debug = true
